--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -8,16 +8,23 @@
         <p>
             {{ form.email.label }}<br>
             {{ form.email(size=64) }}<br>
+            {% for error in form.email.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
 
         </p>
         <p>
             {{ form.password.label }}<br>
             {{ form.password(size=16) }}<br>
+            {% for error in form.password.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
 
         </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
 
-    <p>New User? <a href="#">Click to Register!</a></p>
+    <p>New User? <a href="{{ url_for('auth.register') }}">Click to Register!</a></p>
+     <p>Forgot your password? <a href="{{ url_for('auth.password_reset_request') }}">Click here to reset it</a>.</p>
 {% endblock %}
